--- a/stylesheets/src/components/_component.scss
+++ b/stylesheets/src/components/_component.scss
@@ -18,7 +18,7 @@
     border: borders.$block;
     cursor: pointer;
     padding: 0.5em 1em;
-    width: calc(100% - 4em);
+    width: calc(100% - 2em);
   }
 
   & + .component {
